--- a/index.html
+++ b/index.html
@@ -1,12 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>bancos</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script src="./dist/build.js"></script>
-  </body>
-</html>
+<!DOCTYPE html><html lang=es><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link rel=icon href=favicon.ico><title>Bancos</title><link rel=stylesheet href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900"><link rel=stylesheet href="https://fonts.googleapis.com/css?family=Material+Icons"><link href=css/app.64dd13f6.css rel=preload as=style><link href=css/chunk-vendors.223980f4.css rel=preload as=style><link href=js/app.9b0015c9.js rel=preload as=script><link href=js/chunk-vendors.3f0377ca.js rel=preload as=script><link href=css/chunk-vendors.223980f4.css rel=stylesheet><link href=css/app.64dd13f6.css rel=stylesheet></head><body><noscript><strong>We're sorry but Bancos doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=js/chunk-vendors.3f0377ca.js></script><script src=js/app.9b0015c9.js></script></body></html>
